--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -19,6 +19,10 @@ env:
   DOCKERFILE: Dockerfile.test
   HELM_CHART_PATH: helm/test-app
 
+permissions:
+  contents: write
+  packages: write
+  
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -106,12 +110,14 @@ jobs:
           echo "Helm chart packaged successfully"
           ls -la ./helm-packages/
       
-      - name: Create GitHub Release with Helm Chart
+      - name: Create or Update GitHub Release with Helm Chart
         if: startsWith(github.ref, 'refs/tags/v')
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: |
             ./helm-packages/*.tgz
+          make_latest: true
+          fail_on_unmatched_files: false
           body: |
             ## Docker Image
             ```
@@ -120,8 +126,12 @@ jobs:
             
             ## Helm Installation
             ```bash
-            # Add the chart (if using Helm repo)
-            helm install test-app ./helm-packages/test-app-${{ steps.meta.outputs.version }}.tgz
+            # Add the Helm repository
+            helm repo add test-app https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
+            helm repo update
+            
+            # Install the chart
+            helm install my-test-app test-app/test-app --version ${{ steps.meta.outputs.version }}
             
             # Or install from release assets
             wget https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/test-app-${{ steps.meta.outputs.version }}.tgz
