--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -145,27 +145,30 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
+      - name: Checkout gh-pages branch
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: gh-pages-repo
+          fetch-depth: 0
+        continue-on-error: true
+      
       - name: Setup Git for gh-pages
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
       
-      - name: Checkout or Create gh-pages branch
+      - name: Initialize gh-pages if needed
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
-          # Fetch all branches
-          git fetch origin
-          
-          # Check if gh-pages exists on remote
-          if git ls-remote --heads origin gh-pages | grep gh-pages; then
-            echo "gh-pages branch exists, checking it out"
-            git checkout gh-pages
-            git pull origin gh-pages
-          else
+          if [ ! -d "gh-pages-repo" ]; then
             echo "gh-pages branch does not exist, creating it"
-            git checkout --orphan gh-pages
-            git rm -rf .
+            mkdir -p gh-pages-repo
+            cd gh-pages-repo
+            git init
+            git checkout -b gh-pages
             
             # Create initial index.html
             cat > index.html << 'EOF'
@@ -201,14 +204,14 @@ jobs:
             
             git add index.html
             git commit -m "Initialize gh-pages branch"
+            git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
             git push origin gh-pages
           fi
       
       - name: Update Helm Repository Index
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
-          # Make sure we're on gh-pages
-          git checkout gh-pages
+          cd gh-pages-repo
           
           # Copy packaged charts to gh-pages
           cp -f ../helm-packages/*.tgz . || echo "No charts to copy"
@@ -222,6 +225,7 @@ jobs:
       - name: Commit and Push to gh-pages
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
+          cd gh-pages-repo
           git add .
           git commit -m "Update Helm repository for version ${{ steps.meta.outputs.version }}" || echo "No changes to commit"
-          git push origin gh-pages
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages
